@@ -1317,6 +1317,7 @@
                         <compilerArgs>
                             <arg>-Xlint:all</arg>
                             <arg>-parameters</arg>
+                            <arg>--enable-preview</arg>
                         </compilerArgs>
                     </configuration>
                 </plugin>
